--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,35 @@
             <version>${version.org.eclipse.persistence}</version>
         </dependency>
 
+        <!-- REST dependencies -->
+        <dependency>
+            <groupId>com.atlassian.plugins.rest</groupId>
+            <artifactId>atlassian-rest-common</artifactId>
+            <version>2.8.0-m2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.plugins.rest</groupId>
+            <artifactId>com.atlassian.jersey-library</artifactId>
+            <version>2.8.0-m2</version>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
+        <!-- REST dependencies -->
+
+        <dependency>
+            <groupId>com.atlassian.confluence.rest</groupId>
+            <artifactId>confluence-rest-plugin</artifactId>
+            <version>${version.com.atlassian.confluence}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.confluence.plugins</groupId>
+            <artifactId>confluence-soy</artifactId>
+            <version>${version.com.atlassian.confluence}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.echocat.jomon</groupId>
