--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.echocat</groupId>
     <artifactId>adam</artifactId>
-    <version>0.2.0</version>
+    <version>0.1.9</version>
     <name>echocat Adam</name>
     <packaging>atlassian-plugin</packaging>
 
@@ -39,8 +39,8 @@
         <version.org.javassist>3.18.1-GA</version.org.javassist>
         <version.org.slf4j>1.7.5</version.org.slf4j>
         <version.org.eclipse.persistence>2.5.1</version.org.eclipse.persistence>
-        <version.com.atlassian.confluence>5.7</version.com.atlassian.confluence>
-        <version.com.atlassian.confluence.data>5.7</version.com.atlassian.confluence.data>
+        <version.com.atlassian.confluence>5.8.13</version.com.atlassian.confluence>
+        <version.com.atlassian.confluence.data>5.8.13</version.com.atlassian.confluence.data>
         <version.com.atlassian.maven.plugins.amps>4.2.10</version.com.atlassian.maven.plugins.amps>
         <version.com.atlassian.plugins.testrunner>1.1.1</version.com.atlassian.plugins.testrunner>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -222,7 +222,7 @@
                 <artifactId>maven-amps-plugin</artifactId>
                 <version>${version.com.atlassian.maven.plugins.amps}</version>
                 <configuration>
-                    <jvmArgs>-Xms128m -Xmx2048m -XX:MaxPermSize=512m</jvmArgs>
+                    <jvmArgs>-Xms128m -Xmx2048m -XX:MaxPermSize=512m -Dconfluence.velocity.deprecation.strictmode=false</jvmArgs>
                     <jvmDebugPort>5005</jvmDebugPort>
                     <httpPort>1990</httpPort>
                     <product>confluence</product>
